# starting-ragchatbot-codebase

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.cursor/rules/: CLAUDE.mdc
backend/: ai_generator.py  app.py  document_processor.py  run_tests.py  search_tools.py  vector_store.py
backend/tests/: __init__.py  conftest.py  test_ai_generator.py  test_document_processor.py  test_search_tools.py  test_session_manager.py  test_vector_store.py
docs/: query-processing-flow.md
docs/prompt/: 02_new-chat-button.md  03_adjust-button-style-use-playwrite.md  04_add-clickable-links-to-source.md  04_add-course-outline-query-tool.md
frontend/: script.js  style.css
